result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - epitech-s4qe
      containers:
      - name: result
        image: epitechcontent/t-dop-600-result:k8s
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128M"
