traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-public
  labels:
    app: traefik-ingress-lb
spec:
  selector:
    app: traefik-ingress-lb
  type: NodePort
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
      nodePort: 30021
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: 8080
      nodePort: 30042
